I lost all work, re-doing

--- a/html/index.html
+++ b/html/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<!-- Header section-->
+
   <head>
     <meta charset="UTF-8">
-    <title>Mini Project</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <title>HTML Display</title>
+    <link rel="stylesheet" href="C:\Users\breno\bootcamp\mini-project\css\assets">
   </head>
-<!-- Header section-->
+
   <body>
     <header>
-        <h1>University of Adelaide - Boot Camp 2022</h1>
-<!-- Nav bar section-->
+      <h2>HTML Display</h2>
       <nav>
         <ul>
-            <li><a href="https://github.com/Brenofc1">GitHub</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+          <li id="item-1">LIST ITEM 1</li>
+          <li id="item-2">LIST ITEM 2</li>
+          <li id="item-3">LIST ITEM 3</li>
         </ul>
       </nav>
     </header>
