--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
 <!----------section comming soon------------> 
     <main>
       <h1>My First Website on Boot Camp</h1>
-      <div class="comming-soon">
-        <h3>Comming Soon</h3>
-      </div>
+      <section class="box-0">
+        <section class="box-1">
+          <section class="box-2">
+            <div class="comming-soon">
+              <h3>Comming <br>Soon</h3>
+            </div>
+          </section>
+        </section>
+      </section>
       <p>This is my first website as a boot camp student. It has some good challenges that required from me a lot of hours of dedication.<br>
       I hope, I can do a good job with The University of Adelaide.</p>
 
@@ -32,13 +38,15 @@
       <section class="box-contact">
         <div class="log-box">
           <h2> Contact Me</h2>
-          <section class="input-user">
-            <input type="name" placeholder="User Name">
-          </section>
-          <section class="input-user">
-            <input type="email" placeholder="Email Address">
-          </section>
-          <a href="#"><button type="button" class="send-btn">Send</button></a>
+          <div class="border">
+            <section class="input-user">
+              <input type="name" placeholder="User Name">
+            </section>
+            <section class="input-user">
+              <input type="email" placeholder="Email Address">
+            </section>
+            <a href="#"><button type="button" class="send-btn">Send</button></a>
+          </div>
         </div>
       </section> 
     </main>
