I forgot to insert the link (click contact to go to the page contact)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="https://github.com/Brenofc1">GitHub</a></li>
           <li><a href="C:\Users\breno\bootcamp\mini-project\portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>          
         </ul>
       </nav>
     </header>
@@ -26,7 +26,7 @@
         <section class="box-1">
           <section class="box-2">
             <div class="comming-soon">
-              <h3>Comming <br>Soon</h3>
+              <h3>Comming<br>Soon<br><!--<img src="C:\Users\breno\bootcamp\mini-project\assets\images">--></h3> 
             </div>
           </section>
         </section>
@@ -36,8 +36,8 @@
 
   <!----------Contact me Section------------>    
       <section class="box-contact">
-        <div class="log-box">
-          <h2> Contact Me</h2>
+        <div class="log-box"><h4 id="contact"></a>
+          <h2 id="contact"> Contact Me</h2>
           <div class="border">
             <section class="input-user">
               <input type="name" placeholder="User Name">
