Css updates (link)
css link update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mini Project Breno</title>
     <meta content="mini-project" name="description">
     <meta content="bootcamp" name="keywords">
-    <link rel="stylesheet" href="C:\Users\breno\bootcamp\mini-project\assets\css\style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 <!----------header and nav bar section------------>
   <body>
